tests/error/private_other.gw
#! [contains] can't access private
class C { var private int i;  }

class D {
  var C c;
  <<< c.i >>>;
}
